--- a/package.json
+++ b/package.json
@@ -1,36 +1,32 @@
 {
-  "name": "naukribandhu",
+  "name": "naukribandhu_v1",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:setup": "node --loader ts-node/esm scripts/setup-db.ts"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@heroicons/react": "^2.2.0",
     "dotenv": "^17.2.3",
-    "jose": "^6.1.0",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "next": "16.0.1",
+    "firebase": "^12.6.0",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.556.0",
+    "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
-    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
